# rust-h11

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: parser.rs
docs/: cookbook.md  hardening.md  parser-dependency-review.md  performance.md  publish.md  python-h11-parity.md  rfc9112-compliance.md  user-guide.md
examples/: expect_continue_upload.rs  pipelined_server.rs  upgrade_handoff.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/: README.md
fuzz/corpus/chunked_body_stream/: chunk_extensions_and_trailer.http
fuzz/corpus/parse_request_stream/: chunk_extensions_and_trailer.http  content_length_and_chunked.http  duplicate_content_length_conflict.http  duplicate_content_length_same.http  incomplete_content_length.http  malformed_chunk_size.http  obs_fold_header.http  pipelined_requests.http  response_splitting_header_value.http
fuzz/corpus/parse_response_stream/: chunk_extensions_and_trailer.http  content_length_and_chunked.http  duplicate_content_length_conflict.http  http10_close_delimited.http  incomplete_content_length.http  informational_then_final.http  malformed_chunk_size.http  obs_fold_header.http  response_splitting_reason.http  valid_content_length.http
fuzz/fuzz_targets/: chunked_body_stream.rs  parse_request_stream.rs  parse_response_stream.rs  state_machine_roundtrip.rs
scripts/: generate_python_h11_fixtures.py
src/: _connection.rs  _events.rs  _headers.rs  _readers.rs  _receivebuffer.rs  _state.rs  _util.rs  _writers.rs  lib.rs
tests/: differential_httparse.rs  python_h11_fixtures.rs
tests/fixtures/python-h11/: client_continuation_header_at_start.json  client_duplicate_content_length_conflict.json  client_duplicate_content_length_same.json  client_http10_close_delimited.json  client_incomplete_chunked_eof.json  client_incomplete_content_length_eof.json  client_informational_then_final.json  client_malformed_chunk_size.json  client_malformed_header_line.json  client_malformed_response_status_line.json  client_obs_fold_header.json  client_response_chunked_trailer.json  client_response_content_length.json  client_unsupported_transfer_coding.json  server_connect_request.json  server_continuation_header_at_start.json  server_duplicate_content_length_conflict.json  (+14 more)
