[package]
name = "h11"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.1"
description = "A pure-Rust, bring-your-own-I/O implementation of HTTP/1.1"
license = "Apache-2.0"
repository = "https://github.com/carlopires/rust-h11"
homepage = "https://github.com/carlopires/rust-h11"
documentation = "https://docs.rs/h11"
readme = "README.md"
exclude = ["fuzz/"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"

[dev-dependencies]
criterion = "0.8.2"
httparse = "1.10.1"
serde_json = "1.0.116"

[[bench]]
name = "parser"
harness = false
